--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           
         </div>
         <div class="image-container">
-            <img src="Container2.jpg" alt="the team"> 
+            <img src="container2.jpg" alt="the team"> 
         </div>
     </div>
         <div class="container">
