--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </div>
         <div class="container">
             <div class="image-container">
-                <img src="container2.jpg" alt="the team"> 
+                <img src="container1.jpg" alt="the team 2"> 
             </div>
             <div class="text-content">
                 <h1>History</h1>
