--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
           
         </div>
         <div class="image-container">
-            <img src="container1.jpg" alt="the team"> 
+            <img src="container2.jpg" alt="the team"> 
         </div>
     </div>
         <div class="container">
             <div class="image-container">
-                <img src="container2.jpg" alt="the team"> 
+                <img src="Container1.jpg" alt="the team"> 
             </div>
             <div class="text-content">
                 <h1>History</h1>
