--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <div class="container">
         
         <div class="image-container">
-            <img src="Container2.jpg" alt="the team"> 
+            <img src="container2.jpg" alt="the team"> 
         </div>
         <div class="text-content">
             <h2>ONE DIRECTION</h2>
